[package]
name = "air001-pac"
version = "0.0.1"
description = "Peripheral Access Crate for Air001 microcontroller"
edition = "2021"
license = "MIT"
repository = "https://github.com/air001-rs/air001-pac"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["air001", "embedded"]

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
vcell = "0.1"
critical-section = { version = "1.0", optional = true }
cortex-m-rt = { version = "0.7", optional = true}

[features]
default = ["rt", "critical-section"]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
features = ["rt", "critical-section"]
targets = []

